# SoS-CompPhys-2026

./: CMakeLists.txt  README.md
src/: const.h  main.cpp  misc.cpp  misc.h  myrandom.cpp  myrandom.h  planet.cpp  planet.h  quadtree.cpp  quadtree.h  treetest.cpp  universe.cpp  universe.h
